src/Parser/flex_bison/parser.output
Terminals unused in grammar

    sized_type_literal
    ASYNC
    AWAIT
    LAMBDA
    YIELD
    ARROW
    ":!"
    "=>"
    "self"
    "_"
    EOLCOMMENT
    TYPE_COMMENT


Grammar

    0 $accept: units END_OF_FILE

    1 units: units script_unit
    2      | script_unit
    3      | sep

    4 script_unit: statement

    5 statements: INDENT statements1 DEDENT

    6 sep_statements: sep statements

    7 body_stmts: single_line_statements
    8           | sep_statements

    9 statements1: statements1 statement
   10            | statement

   11 single_line_statements: single_line_multi_statements NEWLINE
   12                       | single_line_multi_statements COMMENT NEWLINE
   13                       | single_line_statement NEWLINE
   14                       | single_line_statement ";" NEWLINE
   15                       | single_line_statement ";" COMMENT NEWLINE
   16                       | single_line_statement COMMENT NEWLINE

   17 single_line_multi_statements: single_line_multi_statements_opt single_line_statement
   18                             | single_line_multi_statements_opt single_line_statement ";"

   19 single_line_multi_statements_opt: single_line_multi_statements_opt single_line_statement ";"
   20                                 | single_line_statement ";"

   21 statement: single_line_statement sep
   22          | multi_line_statement
   23          | multi_line_statement sep

   24 pass_statement: PASS

   25 break_statement: BREAK

   26 continue_statement: CONTINUE

   27 assert_statement: ASSERT expr
   28                 | ASSERT expr "," expr

   29 tuple_item: expr_list
   30           | expr_list ","
   31           | "(" expr_list "," ")"
   32           | "(" expr_list "," expr ")"

   33 for_tuple_item: expr_for_list
   34               | expr_for_list ","
   35               | "(" expr_for_list "," ")"
   36               | "(" expr_for_list "," expr ")"

   37 raise_statement: RAISE
   38                | RAISE expr
   39                | RAISE expr FROM expr

   40 return_statement: RETURN
   41                 | RETURN tuple_item

   42 delete_statement: DEL expr_list
   43                 | DEL expr_list ","
   44                 | DEL "(" expr_list "," ")"
   45                 | DEL "(" expr_list "," expr ")"

   46 augassign_statement: expr augassign_op expr

   47 augassign_op: "+="
   48             | "-="
   49             | "*="
   50             | "/="
   51             | "%="
   52             | "&="
   53             | "|="
   54             | "^="
   55             | "<<="
   56             | ">>="
   57             | "**="
   58             | "//="

   59 ann_assignment_statement: expr ":" expr
   60                         | expr ":" expr "=" expr

   61 single_line_statement: expression_statment
   62                      | assert_statement
   63                      | assignment_statement
   64                      | augassign_statement
   65                      | ann_assignment_statement
   66                      | pass_statement
   67                      | delete_statement
   68                      | return_statement
   69                      | raise_statement
   70                      | break_statement
   71                      | continue_statement
   72                      | import_statement
   73                      | global_statement
   74                      | nonlocal_statement

   75 module: module "." id
   76       | id

   77 module_as_id: module
   78             | module AS id
   79             | "*"

   80 module_item_list: module_item_list "," module_as_id
   81                 | module_as_id

   82 dot_list: dot_list "."
   83         | "."

   84 import_statement: IMPORT module_item_list
   85                 | FROM module IMPORT module_item_list
   86                 | FROM module IMPORT "(" module_item_list comma_opt ")"
   87                 | FROM dot_list IMPORT module_item_list
   88                 | FROM dot_list module IMPORT module_item_list
   89                 | FROM dot_list IMPORT "(" module_item_list comma_opt ")"
   90                 | FROM dot_list module IMPORT "(" module_item_list comma_opt ")"

   91 while_statement: WHILE expr ":" sep statements
   92                | WHILE expr ":" sep statements ELSE ":" sep statements

   93 for_statement: FOR for_tuple_item "in" tuple_item ":" sep statements
   94              | FOR for_tuple_item "in" tuple_item ":" sep statements ELSE ":" sep statements

   95 except_statement: EXCEPT ":" sep statements
   96                 | EXCEPT expr ":" sep statements
   97                 | EXCEPT expr AS id ":" sep statements

   98 except_list: except_list except_statement
   99            | except_statement

  100 try_statement: TRY ":" sep statements except_list
  101              | TRY ":" sep statements except_list ELSE ":" sep statements
  102              | TRY ":" sep statements except_list FINALLY ":" sep statements
  103              | TRY ":" sep statements except_list ELSE ":" sep statements FINALLY ":" sep statements
  104              | TRY ":" sep statements FINALLY ":" sep statements

  105 with_item: expr
  106          | expr AS expr

  107 with_item_list: with_item_list "," with_item
  108               | with_item

  109 with_statement: WITH with_item_list ":" sep statements
  110               | WITH "(" with_item_list "," ")" ":" sep statements

  111 multi_line_statement: if_statement
  112                     | for_statement
  113                     | try_statement
  114                     | with_statement
  115                     | function_def
  116                     | class_def
  117                     | while_statement

  118 decorators_opt: decorators
  119               | ε

  120 decorators: decorators "@" expr sep
  121           | "@" expr sep

  122 parameter: id
  123          | id ":" expr
  124          | id "=" expr
  125          | id ":" expr "=" expr

  126 parameter_list: defparameter_list "," "/" comma_opt
  127               | defparameter_list "," "/" "," parameter_list_no_posonly
  128               | parameter_list_no_posonly

  129 parameter_list_no_posonly: defparameter_list comma_opt
  130                          | defparameter_list "," parameter_list_starargs
  131                          | parameter_list_starargs

  132 defparameter_list: defparameter_list "," parameter
  133                  | parameter

  134 parameter_list_starargs: "*" "," defparameter_list comma_opt
  135                        | "*" "," "**" parameter comma_opt
  136                        | "*" "," defparameter_list "," "**" parameter comma_opt
  137                        | "*" parameter comma_opt
  138                        | "*" parameter "," defparameter_list comma_opt
  139                        | "*" parameter "," "**" parameter comma_opt
  140                        | "*" parameter "," defparameter_list "," "**" parameter comma_opt
  141                        | "**" parameter comma_opt

  142 parameter_list_opt: parameter_list
  143                   | ε

  144 comma_opt: ","
  145          | ε

  146 function_def: decorators_opt DEF id "(" parameter_list_opt ")" ":" body_stmts
  147             | decorators_opt DEF id "(" parameter_list_opt ")" "->" expr ":" body_stmts

  148 class_def: decorators_opt CLASS id ":" sep statements
  149          | decorators_opt CLASS id "(" expr_list_opt ")" ":" sep statements
  150          | decorators_opt CLASS id "(" expr_list "," keyword_items ")" ":" sep statements
  151          | decorators_opt CLASS id "(" keyword_items "," expr_list ")" ":" sep statements
  152          | decorators_opt CLASS id "(" keyword_items ")" ":" sep statements

  153 global_statement: GLOBAL expr_list

  154 ternary_if_statement: expr IF expr ELSE expr

  155 nonlocal_statement: NONLOCAL expr_list

  156 elif_statement: ELIF expr ":" sep statements
  157               | ELIF expr ":" sep statements ELSE ":" sep statements
  158               | ELIF expr ":" sep statements elif_statement

  159 if_statement: IF expr ":" body_stmts
  160             | IF expr ":" body_stmts ELSE ":" body_stmts
  161             | IF expr ":" body_stmts elif_statement

  162 target_list: target_list tuple_item "="
  163            | tuple_item "="

  164 assignment_statement: target_list tuple_item

  165 expression_statment: expr

  166 string: string string_literal
  167       | string_literal
  168       | id string_literal
  169       | string id string_literal

  170 expr_list_opt: expr_list
  171              | ε

  172 expr_list: expr_list "," expr
  173          | expr

  174 expr_for_list: expr_for_list "," expr
  175              | expr

  176 dict: expr ":" expr

  177 dict_list: dict_list "," dict
  178          | dict

  179 call_arguement_list: expr_list_opt
  180                    | expr_list ","

  181 keyword_item: id "=" expr
  182             | "**" expr

  183 keyword_items: keyword_items "," keyword_item
  184              | keyword_item

  185 primary: id
  186        | string
  187        | expr "." id

  188 function_call: primary "(" call_arguement_list ")"
  189              | primary "(" expr_list "," keyword_items comma_opt ")"
  190              | primary "(" keyword_items "," expr_list comma_opt ")"
  191              | primary "(" keyword_items comma_opt ")"
  192              | function_call "(" call_arguement_list ")"
  193              | function_call "(" expr_list "," keyword_items comma_opt ")"
  194              | function_call "(" keyword_items "," expr_list comma_opt ")"
  195              | function_call "(" keyword_items comma_opt ")"
  196              | "(" expr ")" "(" call_arguement_list ")"

  197 expr: id
  198     | integer_literal
  199     | string
  200     | real_literal
  201     | image_literal
  202     | TRUE
  203     | FALSE
  204     | NONE
  205     | "..."
  206     | "(" expr ")"
  207     | "(" ")"
  208     | function_call
  209     | "[" expr_list_opt "]"
  210     | "[" expr_list "," "]"
  211     | "{" expr_list "}"
  212     | "{" expr_list "," "}"
  213     | expr "." id
  214     | "{" "}"
  215     | "{" dict_list "}"
  216     | id ":=" expr
  217     | "*" expr
  218     | expr "+" expr
  219     | expr "-" expr
  220     | expr "*" expr
  221     | expr "/" expr
  222     | expr "%" expr
  223     | "-" expr
  224     | "+" expr
  225     | "~" expr
  226     | expr "**" expr
  227     | expr "//" expr
  228     | expr "@" expr
  229     | expr "&" expr
  230     | expr "|" expr
  231     | expr "^" expr
  232     | expr "<<" expr
  233     | expr ">>" expr
  234     | expr "==" expr
  235     | expr "!=" expr
  236     | expr "<" expr
  237     | expr "<=" expr
  238     | expr ">" expr
  239     | expr ">=" expr
  240     | expr "is" expr
  241     | expr "is not" expr
  242     | expr "in" expr
  243     | expr "not in" expr
  244     | expr "and" expr
  245     | expr "or" expr
  246     | "not" expr
  247     | "[" expr comp_for_items "]"
  248     | "{" expr comp_for_items "}"
  249     | "{" expr ":" expr comp_for_items "}"
  250     | ternary_if_statement

  251 id_list: id_list "," id
  252        | id

  253 id_item: id_list
  254        | id_list ","
  255        | "(" id ")"
  256        | "(" id_list "," ")"
  257        | "(" id_list "," id ")"

  258 comp_for: FOR id_item "in" expr
  259         | FOR id_item "in" expr IF expr

  260 comp_for_items: comp_for_items comp_for
  261               | comp_for

  262 id: identifier

  263 sep: sep sep_one
  264    | sep_one

  265 sep_one: NEWLINE
  266        | COMMENT
  267        | ";"


Terminals, with rules where they appear

    END_OF_FILE (0) 0
    error (256)
    integer_literal <long long> (258) 198
    real_literal <double> (259) 200
    image_literal <double> (260) 201
    identifier <std::string> (261) 262
    sized_type_literal <std::string> (262)
    string_literal <std::string> (263) 166 167 168 169
    FALSE (264) 203
    TRUE (265) 202
    NONE (266) 204
    "and" (267) 244
    AS (268) 78 97 106
    ASSERT (269) 27 28
    RAISE (270) 37 38 39
    ASYNC (271)
    AWAIT (272)
    BREAK (273) 25
    CLASS (274) 148 149 150 151 152
    CONTINUE (275) 26
    DEF (276) 146 147
    DEL (277) 42 43 44 45
    ELIF (278) 156 157 158
    ELSE (279) 92 94 101 103 154 157 160
    EXCEPT (280) 95 96 97
    FINALLY (281) 102 103 104
    FOR (282) 93 94 258 259
    FROM (283) 39 85 86 87 88 89 90
    GLOBAL (284) 153
    IF (285) 154 159 160 161 259
    IMPORT (286) 84 85 86 87 88 89 90
    "in" (287) 93 94 242 258 259
    "is" (288) 240
    "is not" (289) 241
    "not in" (290) 243
    LAMBDA (291)
    NONLOCAL (292) 155
    "not" (293) 246
    "or" (294) 245
    PASS (295) 24
    RETURN (296) 40 41
    TRY (297) 100 101 102 103 104
    WHILE (298) 91 92
    WITH (299) 109 110
    YIELD (300)
    ARROW (301)
    "&" (302) 229
    "^" (303) 231
    ":" (304) 59 60 91 92 93 94 95 96 97 100 101 102 103 104 109 110 123 125 146 147 148 149 150 151 152 156 157 158 159 160 161 176 249
    ":!" (305)
    "," (306) 28 30 31 32 34 35 36 43 44 45 80 107 110 126 127 130 132 134 135 136 138 139 140 144 150 151 172 174 177 180 183 189 190 193 194 210 212 251 254 256 257
    "=>" (307)
    "=" (308) 60 124 125 162 163 181
    ":=" (309) 216
    "==" (310) 234
    "{" (311) 211 212 214 215 248 249
    "(" (312) 31 32 35 36 44 45 86 89 90 110 146 147 149 150 151 152 188 189 190 191 192 193 194 195 196 206 207 255 256 257
    "[" (313) 209 210 247
    "-" (314) 219 223
    "." (315) 75 82 83 187 213
    "+" (316) 218 224
    "*" (317) 79 134 135 136 137 138 139 140 217 220
    "**" (318) 135 136 139 140 141 182 226
    "@" (319) 120 121 228
    "//" (320) 227
    "%" (321) 222
    "~" (322) 225
    "|" (323) 230
    "<<" (324) 232
    ">>" (325) 233
    "<" (326) 236
    "<=" (327) 237
    ">" (328) 238
    ">=" (329) 239
    "..." (330) 205
    "}" (331) 211 212 214 215 248 249
    ")" (332) 31 32 35 36 44 45 86 89 90 110 146 147 149 150 151 152 188 189 190 191 192 193 194 195 196 206 207 255 256 257
    "]" (333) 209 210 247
    "self" (334)
    ";" (335) 14 15 18 19 20 267
    "/" (336) 126 127 221
    "_" (337)
    "->" (338) 147
    "+=" (339) 47
    "-=" (340) 48
    "*=" (341) 49
    "/=" (342) 50
    "%=" (343) 51
    "&=" (344) 52
    "|=" (345) 53
    "^=" (346) 54
    "<<=" (347) 55
    ">>=" (348) 56
    "**=" (349) 57
    "//=" (350) 58
    INDENT (351) 5
    DEDENT (352) 5
    NEWLINE (353) 11 12 13 14 15 16 265
    COMMENT (354) 12 15 16 266
    EOLCOMMENT (355)
    TYPE_COMMENT (356)
    "!=" (357) 235
    UNARY (358)


Nonterminals, with rules where they appear

    $accept (104)
        on left: 0
    units (105)
        on left: 1 2 3
        on right: 0 1
    script_unit <Nonnull<Statement*>> (106)
        on left: 4
        on right: 1 2
    statements <std::vector<Nonnull<Statement*>>> (107)
        on left: 5
        on right: 6 91 92 93 94 95 96 97 100 101 102 103 104 109 110 148 149 150 151 152 156 157 158
    sep_statements <std::vector<Nonnull<Statement*>>> (108)
        on left: 6
        on right: 8
    body_stmts <std::vector<Nonnull<Statement*>>> (109)
        on left: 7 8
        on right: 146 147 159 160 161
    statements1 <std::vector<Nonnull<Statement*>>> (110)
        on left: 9 10
        on right: 5 9
    single_line_statements <std::vector<Nonnull<Statement*>>> (111)
        on left: 11 12 13 14 15 16
        on right: 7
    single_line_multi_statements <std::vector<Nonnull<Statement*>>> (112)
        on left: 17 18
        on right: 11 12
    single_line_multi_statements_opt <std::vector<Nonnull<Statement*>>> (113)
        on left: 19 20
        on right: 17 18 19
    statement <Nonnull<Statement*>> (114)
        on left: 21 22 23
        on right: 4 9 10
    pass_statement <Nonnull<Statement*>> (115)
        on left: 24
        on right: 66
    break_statement <Nonnull<Statement*>> (116)
        on left: 25
        on right: 70
    continue_statement <Nonnull<Statement*>> (117)
        on left: 26
        on right: 71
    assert_statement <Nonnull<Statement*>> (118)
        on left: 27 28
        on right: 62
    tuple_item <Nonnull<Expression*>> (119)
        on left: 29 30 31 32
        on right: 41 93 94 162 163 164
    for_tuple_item <Nonnull<Expression*>> (120)
        on left: 33 34 35 36
        on right: 93 94
    raise_statement <Nonnull<Statement*>> (121)
        on left: 37 38 39
        on right: 69
    return_statement <Nonnull<Statement*>> (122)
        on left: 40 41
        on right: 68
    delete_statement <Nonnull<Statement*>> (123)
        on left: 42 43 44 45
        on right: 67
    augassign_statement <Nonnull<Statement*>> (124)
        on left: 46
        on right: 64
    augassign_op <operatorType> (125)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58
        on right: 46
    ann_assignment_statement <Nonnull<Statement*>> (126)
        on left: 59 60
        on right: 65
    single_line_statement <Nonnull<Statement*>> (127)
        on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74
        on right: 13 14 15 16 17 18 19 20 21
    module <std::vector<Nonnull<Expression*>>> (128)
        on left: 75 76
        on right: 75 77 78 85 86 88 90
    module_as_id <Nonnull<Alias*>> (129)
        on left: 77 78 79
        on right: 80 81
    module_item_list <std::vector<Nonnull<Alias*>>> (130)
        on left: 80 81
        on right: 80 84 85 86 87 88 89 90
    dot_list (131)
        on left: 82 83
        on right: 82 87 88 89 90
    import_statement <Nonnull<Statement*>> (132)
        on left: 84 85 86 87 88 89 90
        on right: 72
    while_statement <Nonnull<Statement*>> (133)
        on left: 91 92
        on right: 117
    for_statement <Nonnull<Statement*>> (134)
        on left: 93 94
        on right: 112
    except_statement <Nonnull<Statement*>> (135)
        on left: 95 96 97
        on right: 98 99
    except_list <std::vector<Nonnull<Statement*>>> (136)
        on left: 98 99
        on right: 98 100 101 102 103
    try_statement <Nonnull<Statement*>> (137)
        on left: 100 101 102 103 104
        on right: 113
    with_item <Nonnull<Statement*>> (138)
        on left: 105 106
        on right: 107 108
    with_item_list <std::vector<Nonnull<Statement*>>> (139)
        on left: 107 108
        on right: 107 109 110
    with_statement <Nonnull<Statement*>> (140)
        on left: 109 110
        on right: 114
    multi_line_statement <Nonnull<Statement*>> (141)
        on left: 111 112 113 114 115 116 117
        on right: 22 23
    decorators_opt <std::vector<Nonnull<Expression*>>> (142)
        on left: 118 119
        on right: 146 147 148 149 150 151 152
    decorators <std::vector<Nonnull<Expression*>>> (143)
        on left: 120 121
        on right: 118 120
    parameter <Nonnull<Arg*>> (144)
        on left: 122 123 124 125
        on right: 132 133 135 136 137 138 139 140 141
    parameter_list <Nonnull<FnArg*>> (145)
        on left: 126 127 128
        on right: 142
    parameter_list_no_posonly <Nonnull<NoPosOnlyArg*>> (146)
        on left: 129 130 131
        on right: 127 128
    defparameter_list <std::vector<Nonnull<Arg*>>> (147)
        on left: 132 133
        on right: 126 127 129 130 132 134 136 138 140
    parameter_list_starargs <Nonnull<StarArg*>> (148)
        on left: 134 135 136 137 138 139 140 141
        on right: 130 131
    parameter_list_opt <Nonnull<Arguments*>> (149)
        on left: 142 143
        on right: 146 147
    comma_opt (150)
        on left: 144 145
        on right: 86 89 90 126 129 134 135 136 137 138 139 140 141 189 190 191 193 194 195
    function_def <Nonnull<Statement*>> (151)
        on left: 146 147
        on right: 115
    class_def <Nonnull<Statement*>> (152)
        on left: 148 149 150 151 152
        on right: 116
    global_statement <Nonnull<Statement*>> (153)
        on left: 153
        on right: 73
    ternary_if_statement <Nonnull<Expression*>> (154)
        on left: 154
        on right: 250
    nonlocal_statement <Nonnull<Statement*>> (155)
        on left: 155
        on right: 74
    elif_statement <Nonnull<Statement*>> (156)
        on left: 156 157 158
        on right: 158 161
    if_statement <Nonnull<Statement*>> (157)
        on left: 159 160 161
        on right: 111
    target_list <std::vector<Nonnull<Expression*>>> (158)
        on left: 162 163
        on right: 162 164
    assignment_statement <Nonnull<Statement*>> (159)
        on left: 164
        on right: 63
    expression_statment <Nonnull<Statement*>> (160)
        on left: 165
        on right: 61
    string <Nonnull<Expression*>> (161)
        on left: 166 167 168 169
        on right: 166 169 186 199
    expr_list_opt <std::vector<Nonnull<Expression*>>> (162)
        on left: 170 171
        on right: 149 179 209
    expr_list <std::vector<Nonnull<Expression*>>> (163)
        on left: 172 173
        on right: 29 30 31 32 42 43 44 45 150 151 153 155 170 172 180 189 190 193 194 210 211 212
    expr_for_list <std::vector<Nonnull<Expression*>>> (164)
        on left: 174 175
        on right: 33 34 35 36 174
    dict <PairNonnullExpr> (165)
        on left: 176
        on right: 177 178
    dict_list <std::vector<PairNonnullExpr>> (166)
        on left: 177 178
        on right: 177 215
    call_arguement_list <std::vector<Nonnull<Expression*>>> (167)
        on left: 179 180
        on right: 188 192 196
    keyword_item <Nonnull<Keyword*>> (168)
        on left: 181 182
        on right: 183 184
    keyword_items <std::vector<Nonnull<Keyword*>>> (169)
        on left: 183 184
        on right: 150 151 152 183 189 190 191 193 194 195
    primary <Nonnull<Expression*>> (170)
        on left: 185 186 187
        on right: 188 189 190 191
    function_call <Nonnull<Expression*>> (171)
        on left: 188 189 190 191 192 193 194 195 196
        on right: 192 193 194 195 208
    expr <Nonnull<Expression*>> (172)
        on left: 197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250
        on right: 27 28 32 36 38 39 45 46 59 60 91 92 96 97 105 106 120 121 123 124 125 147 154 156 157 158 159 160 161 165 172 173 174 175 176 181 182 187 196 206 213 216 217 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 258 259
    id_list <std::vector<Nonnull<Expression*>>> (173)
        on left: 251 252
        on right: 251 253 254 256 257
    id_item <Nonnull<Expression*>> (174)
        on left: 253 254 255 256 257
        on right: 258 259
    comp_for <Nonnull<Comprehension*>> (175)
        on left: 258 259
        on right: 260 261
    comp_for_items <std::vector<Nonnull<Comprehension*>>> (176)
        on left: 260 261
        on right: 247 248 249 260
    id <Nonnull<Name*>> (177)
        on left: 262
        on right: 75 76 78 97 122 123 124 125 146 147 148 149 150 151 152 168 169 181 185 187 197 213 216 251 252 255 257
    sep <std::vector<std::string>> (178)
        on left: 263 264
        on right: 3 6 21 23 91 92 93 94 95 96 97 100 101 102 103 104 109 110 120 121 148 149 150 151 152 156 157 158 263
    sep_one <std::string> (179)
        on left: 265 266 267
        on right: 263 264


State 0

    0 $accept: • units END_OF_FILE

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    ASSERT           shift, and go to state 9
    RAISE            shift, and go to state 10
    BREAK            shift, and go to state 11
    CONTINUE         shift, and go to state 12
    DEL              shift, and go to state 13
    FOR              shift, and go to state 14
    FROM             shift, and go to state 15
    GLOBAL           shift, and go to state 16
    IF               shift, and go to state 17
    IMPORT           shift, and go to state 18
    NONLOCAL         shift, and go to state 19
    "not"            shift, and go to state 20
    PASS             shift, and go to state 21
    RETURN           shift, and go to state 22
    TRY              shift, and go to state 23
    WHILE            shift, and go to state 24
    WITH             shift, and go to state 25
    "{"              shift, and go to state 26
    "("              shift, and go to state 27
    "["              shift, and go to state 28
    "-"              shift, and go to state 29
    "+"              shift, and go to state 30
    "*"              shift, and go to state 31
    "@"              shift, and go to state 32
    "~"              shift, and go to state 33
    "..."            shift, and go to state 34
    ";"              shift, and go to state 35
    NEWLINE          shift, and go to state 36
    COMMENT          shift, and go to state 37

    $default  reduce using rule 119 (decorators_opt)

    units                     go to state 38
    script_unit               go to state 39
    statement                 go to state 40
    pass_statement            go to state 41
    break_statement           go to state 42
    continue_statement        go to state 43
    assert_statement          go to state 44
    tuple_item                go to state 45
    raise_statement           go to state 46
    return_statement          go to state 47
    delete_statement          go to state 48
    augassign_statement       go to state 49
    ann_assignment_statement  go to state 50
    single_line_statement     go to state 51
    import_statement          go to state 52
    while_statement           go to state 53
    for_statement             go to state 54
    try_statement             go to state 55
    with_statement            go to state 56
    multi_line_statement      go to state 57
    decorators_opt            go to state 58
    decorators                go to state 59
    function_def              go to state 60
    class_def                 go to state 61
    global_statement          go to state 62
    ternary_if_statement      go to state 63
    nonlocal_statement        go to state 64
    if_statement              go to state 65
    target_list               go to state 66
    assignment_statement      go to state 67
    expression_statment       go to state 68
    string                    go to state 69
    expr_list                 go to state 70
    primary                   go to state 71
    function_call             go to state 72
    expr                      go to state 73
    id                        go to state 74
    sep                       go to state 75
    sep_one                   go to state 76


State 1

  198 expr: integer_literal •

    $default  reduce using rule 198 (expr)


State 2

  200 expr: real_literal •

    $default  reduce using rule 200 (expr)


State 3

  201 expr: image_literal •

    $default  reduce using rule 201 (expr)


State 4

  262 id: identifier •

    $default  reduce using rule 262 (id)


State 5

  167 string: string_literal •

    $default  reduce using rule 167 (string)


State 6

  203 expr: FALSE •

    $default  reduce using rule 203 (expr)


State 7

  202 expr: TRUE •

    $default  reduce using rule 202 (expr)


State 8

  204 expr: NONE •

    $default  reduce using rule 204 (expr)


State 9

   27 assert_statement: ASSERT • expr
   28                 | ASSERT • expr "," expr

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 20
    "{"              shift, and go to state 26
    "("              shift, and go to state 77
    "["              shift, and go to state 28
    "-"              shift, and go to state 29
    "+"              shift, and go to state 30
    "*"              shift, and go to state 31
    "~"              shift, and go to state 33
    "..."            shift, and go to state 34

    ternary_if_statement  go to state 63
    string                go to state 69
    primary               go to state 71
    function_call         go to state 72
    expr                  go to state 78
    id                    go to state 74


State 10

   37 raise_statement: RAISE •
   38                | RAISE • expr
   39                | RAISE • expr FROM expr

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 20
    "{"              shift, and go to state 26
    "("              shift, and go to state 77
    "["              shift, and go to state 28
    "-"              shift, and go to state 29
    "+"              shift, and go to state 30
    "*"              shift, and go to state 31
    "~"              shift, and go to state 33
    "..."            shift, and go to state 34

    $default  reduce using rule 37 (raise_statement)

    ternary_if_statement  go to state 63
    string                go to state 69
    primary               go to state 71
    function_call         go to state 72
    expr                  go to state 79
    id                    go to state 74


State 11

   25 break_statement: BREAK •

    $default  reduce using rule 25 (break_statement)


State 12

   26 continue_statement: CONTINUE •

    $default  reduce using rule 26 (continue_statement)


State 13

   42 delete_statement: DEL • expr_list
   43                 | DEL • expr_list ","
   44                 | DEL • "(" expr_list "," ")"
   45                 | DEL • "(" expr_list "," expr ")"

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 20
    "{"              shift, and go to state 26
    "("              shift, and go to state 80
    "["              shift, and go to state 28
    "-"              shift, and go to state 29
    "+"              shift, and go to state 30
    "*"              shift, and go to state 31
    "~"              shift, and go to state 33
    "..."            shift, and go to state 34

    ternary_if_statement  go to state 63
    string                go to state 69
    expr_list             go to state 81
    primary               go to state 71
    function_call         go to state 72
    expr                  go to state 82
    id                    go to state 74


State 14

   93 for_statement: FOR • for_tuple_item "in" tuple_item ":" sep statements
   94              | FOR • for_tuple_item "in" tuple_item ":" sep statements ELSE ":" sep statements

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 20
    "{"              shift, and go to state 26
    "("              shift, and go to state 83
    "["              shift, and go to state 28
    "-"              shift, and go to state 29
    "+"              shift, and go to state 30
    "*"              shift, and go to state 31
    "~"              shift, and go to state 33
    "..."            shift, and go to state 34

    for_tuple_item        go to state 84
    ternary_if_statement  go to state 63
    string                go to state 69
    expr_for_list         go to state 85
    primary               go to state 71
    function_call         go to state 72
    expr                  go to state 86
    id                    go to state 74


State 15

   85 import_statement: FROM • module IMPORT module_item_list
   86                 | FROM • module IMPORT "(" module_item_list comma_opt ")"
   87                 | FROM • dot_list IMPORT module_item_list
   88                 | FROM • dot_list module IMPORT module_item_list
   89                 | FROM • dot_list IMPORT "(" module_item_list comma_opt ")"
   90                 | FROM • dot_list module IMPORT "(" module_item_list comma_opt ")"

    identifier  shift, and go to state 4
    "."         shift, and go to state 87

    module    go to state 88
    dot_list  go to state 89
    id        go to state 90


State 16

  153 global_statement: GLOBAL • expr_list

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 20
    "{"              shift, and go to state 26
    "("              shift, and go to state 77
    "["              shift, and go to state 28
    "-"              shift, and go to state 29
    "+"              shift, and go to state 30
    "*"              shift, and go to state 31
    "~"              shift, and go to state 33
    "..."            shift, and go to state 34

    ternary_if_statement  go to state 63
    string                go to state 69
    expr_list             go to state 91
    primary               go to state 71
    function_call         go to state 72
    expr                  go to state 82
    id                    go to state 74


State 17

  159 if_statement: IF • expr ":" body_stmts
  160             | IF • expr ":" body_stmts ELSE ":" body_stmts
  161             | IF • expr ":" body_stmts elif_statement

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 20
    "{"              shift, and go to state 26
    "("              shift, and go to state 77
    "["              shift, and go to state 28
    "-"              shift, and go to state 29
    "+"              shift, and go to state 30
    "*"              shift, and go to state 31
    "~"              shift, and go to state 33
    "..."            shift, and go to state 34

    ternary_if_statement  go to state 63
    string                go to state 69
    primary               go to state 71
    function_call         go to state 72
    expr                  go to state 92
    id                    go to state 74


State 18

   84 import_statement: IMPORT • module_item_list

    identifier  shift, and go to state 4
    "*"         shift, and go to state 93

    module            go to state 94
    module_as_id      go to state 95
    module_item_list  go to state 96
    id                go to state 90


State 19

  155 nonlocal_statement: NONLOCAL • expr_list

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 20
    "{"              shift, and go to state 26
    "("              shift, and go to state 77
    "["              shift, and go to state 28
    "-"              shift, and go to state 29
    "+"              shift, and go to state 30
    "*"              shift, and go to state 31
    "~"              shift, and go to state 33
    "..."            shift, and go to state 34

    ternary_if_statement  go to state 63
    string                go to state 69
    expr_list             go to state 97
    primary               go to state 71
    function_call         go to state 72
    expr                  go to state 82
    id                    go to state 74


State 20

  246 expr: "not" • expr

    integer_literal  shift, and go to state 1
    real_literal     shift, and go to state 2
    image_literal    shift, and go to state 3
    identifier       shift, and go to state 4
    string_literal   shift, and go to state 5
    FALSE            shift, and go to state 6
    TRUE             shift, and go to state 7
    NONE             shift, and go to state 8
    "not"            shift, and go to state 20
    "{"              shift, and go to state 26
    "("              shift, and go to state 77
    "["              shift, and go to state 28
    "-"              shift, and go to state 29
    "+"              shift, and go to state 30
    "*"              shift, and go to state 31
    "~"              shift, and go to state 33
    "..."            shift, and go to state 34

    ternary_if_statement  go to state 63
    string                go to state 69
    primary               go to state 71
    function_call         go to state 72
    expr                  go to state 98
    id                    go to state 74


State 21

   24 pass_statement: PASS •

    $default  reduce using rule 24 (pass_statement)


State 22

   40 return_statement: RETURN •
   41                 | RETURN • tuple_item
